@@ -2659,12 +2659,22 @@ test(966, fread(input, colClasses=list(character=2:4)), error="Column number 4 (
 # Character input more than 4096 bytes (used to be passed through path.expand which imposed the limit), #2649
 test(967, nrow(fread( paste( rep('a\tb\n', 10000), collapse=''), header=FALSE)), 10000L)
 
+# Test fread warns about removal of any footer (and autostart skips up over it)
+test(968, fread("A,B\n1,3\n2,4\n\nRowcount: 2\n"), data.table(A=1:2,B=3:4), warning="Stopped reading at empty line 4.*discarded.*Rowcount: 2")
+test(969, fread("A,B\n1,3\n2,4\n\n\nRowcount: 2"), data.table(A=1:2,B=3:4), warning="Stopped reading at empty line 4.*discarded.*Rowcount: 2")
+test(970, fread("A,B\n1,3\n2,4\n\n\nRowcount: 2\n\n"), data.table(A=1:2,B=3:4), warning="Stopped reading at empty line 4.*discarded.*Rowcount: 2")
+
 # fread skip override
 input = "some,bad,data\nA,B,C\n1,3,5\n2,4,6\n"
-test(968, fread(input), data.table(some=c("A",1:2),bad=c("B",3:4),data=c("C",5:6)))
-test(969, fread(input, skip=1), data.table(A=1:2,B=3:4,C=5:6))
-test(970, fread(input, skip=2), data.table(V1=1:2,V2=3:4,V3=5:6))
-test(971, fread(input, skip=2, header=TRUE), data.table("1"=2L,"3"=4L,"5"=6L))
+test(971, fread(input), data.table(some=c("A",1:2),bad=c("B",3:4),data=c("C",5:6)))
+test(972, fread(input, skip=1), data.table(A=1:2,B=3:4,C=5:6))
+test(973, fread(input, skip=2), data.table(V1=1:2,V2=3:4,V3=5:6))
+test(974, fread(input, skip=2, header=TRUE), data.table("1"=2L,"3"=4L,"5"=6L))
+test(975, fread(input, skip="B"), data.table(A=1:2,B=3:4,C=5:6))
+input = "\n\nA,B\n1,3\n2,4\n\nC,D\n5,7\n6,8\n\nE,F\n9,11\n10,12\n"   # 3 tables in one file
+test(976, fread(input), data.table(E=9:10,F=11:12))   # autostart 30 finds the last one
+test(977, fread(input, autostart=8), data.table(C=5:6,D=7:8), warning="Stopped reading at empty line 10.*but text exists afterwards")
+test(978, fread(input, skip="D"), data.table(C=5:6,D=7:8), warning="Stopped reading at empty line, 2 lines after.*but text exists afterward")
 
 
 # TO DO: add examples of multiple LHS (name and position) and multiple RHS to example(":=")
